# rust-embedded-libc-allocator

./: Makefile  README.md  STM32L082CZYx_FLASH.ld
.github/workflows/: c-cpp.yml
Src/: main.c
rustlib/: Cargo.toml  rust_statiblic_libc_allocator.h
rustlib/.cargo/: config
rustlib/src/: lib.rs
