[package]
name = "rust_statiblic_libc_allocator"
version = "0.0.1"
authors = ["Andrew Pull <pullin@berkeley.edu>"]

[lib]
name = "rust_statiblic_libc_allocator"
crate-type = ["staticlib"]

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"

[dependencies.stm32l0]
version = "0.15.1"
features = ["stm32l0x2"]

#The "arc" feature must be disabled in cstr_core, since Cortex M0 has no instruction-level support
# for atomic operations.
[dependencies.cstr_core]
version = "0.2.6"
default-features = false
# Note: we must not enable "arc" feature here for Cortex M0, since thumbv6 has no atomic operations
features = ["alloc"]

[profile.release]
codegen-units = 1 # better optimizations
opt-level = 'z'  # Optimize for size.
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations